# SkyCrypt-desktop

./: .gitattributes  .gitignore  CREDITS.md  LICENSE  README.md  package.json
.github/workflows/: release.yml
AUR/: PKGBUILD
AUR-bin/: PKGBUILD
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/injections/: interaction_overrides.js  skycrypt_enhanced.js  skycrypt_essentials.js
src-tauri/src/: injector.rs  lib.rs  main.rs
src/routes/: +page.svelte
src/routes/offline/: +page.svelte
