[package]
name = "skycrypt-desktop"
version = "0.1.0"
description = "A desktop wrapper for SkyCrypt"
authors = ["you"]
edition = "2021"

[lib]
name = "skycrypt_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[features]
devtools = ["tauri/devtools"]
